Bux Fix: MouseScrollIcon not showing up on dark mode

--- a/components/MouseScrollIcon/mouseScrollIcon.module.css
+++ b/components/MouseScrollIcon/mouseScrollIcon.module.css
@@ -48,3 +48,12 @@
 		transform: translateY(46px);
 	}
 }
+
+@media (prefers-color-scheme: dark) {
+	.iconScroll {
+		box-shadow: inset 0 0 0 1px #ffffff60;
+	}
+	.iconScroll:before {
+		background: #fff;
+	}
+}
