--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -16,7 +16,6 @@
 	text-align: center;
 }
 
-
 .marginBottom3Rem {
 	margin: 0 0 3rem;
 }
@@ -42,11 +41,5 @@
 	.backToLocation img {
 		filter: invert(47%) sepia(73%) saturate(2145%) hue-rotate(190deg)
 			brightness(102%) contrast(104%);
-	}
-	.iconScroll {
-		box-shadow: inset 0 0 0 1px #ffffff60;
-	}
-	.iconScroll:before {
-		background: #fff;
 	}
 }
